Bug 1442887 - Align the #clearDataSettings button in about:preferences to the very right. r=jaws
MozReview-Commit-ID: ketCjIIUl0

UltraBlame original commit: 5d6c7b12169a4ff6cd79ef0cf9a55c897f4a31a8

--- a/browser/themes/shared/incontentprefs/preferences.inc.css
+++ b/browser/themes/shared/incontentprefs/preferences.inc.css
@@ -1615,6 +1615,28 @@ top
 ;
 }
 #
+historyButtons
+{
+display
+:
+flex
+;
+flex
+-
+direction
+:
+column
+;
+justify
+-
+content
+:
+space
+-
+between
+;
+}
+#
 acceptCookies
 {
 margin
